# geodude

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/geodude/: __init__.py  cluster_functions.py
src/roil/: __init__.py
tests/: README.md  conftest.py  test_cluster_functions.py  test_data.py  test_geodude.py  test_integration.py  test_performance.py  test_utils.py
tests/data/: README.md  expected_geohashes.json  sample_coordinates.json
